[project]
name = "supply-chain-ai-agents"
version = "0.1.0"
description = "Supply Chain AI Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "python-dotenv==1.2.1",
  "PyJWT==2.10.1",
  "python-multipart==0.0.20",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "injector>=0.19.0",
  "fastapi_injector>=0.8.0",
  "loguru>=0.7.3",
  "Pillow>=11.3.0",
  "psycopg[binary]>=3.2.9",
  "six>=1.17.0",
]

[dependency-groups]
test = [
  "deptry==0.23.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.11",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "deptry>=0.20.0",
    "testcontainers>=4.13.3",
    "python-semantic-release>=10.5.3",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*test.py"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100 # Google Python Style Guide
exclude = [
    ".venv",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# Basic configuration
python_version = "3.13"
strict = false  # Less strict to avoid pydantic issues
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false

# Import handling
ignore_missing_imports = true
follow_imports = "silent"

# Exclude directories
exclude = [
    ".venv/",
    "scripts/",
    "tests/",
]

[tool.uv]
package = true


[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*\))?: .+''',
    '''ci(?:\([^)]*\))?: .+''',
    '''refactor(?:\([^)]*\))?: .+''',
    '''style(?:\([^)]*\))?: .+''',
    '''test(?:\([^)]*\))?: .+''',
    '''build(?:\([^)]*\))?: .+''',
    '''Initial [Cc]ommit.*''',
]

[tool.deptry]
exclude = [
    ".venv",
    ".temp",
    "scripts",
    "tests",
]

[tool.deptry.per_rule_ignores]
DEP001 = ["starlette", "injector"]
DEP002 = ["gunicorn", "pip-system-certs"]
